[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/buttons/home-normal.png" type="Texture" id=1]
[ext_resource path="res://assets/buttons/home-click.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/home-hover.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/home-locked.png" type="Texture" id=4]
[ext_resource path="res://src/scripts/UI.gd" type="Script" id=5]
[ext_resource path="res://assets/buttons/room-click.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/room-hover.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/room-locked.png" type="Texture" id=8]
[ext_resource path="res://assets/buttons/room-normal.png" type="Texture" id=9]
[ext_resource path="res://assets/buttons/shop-locked.png" type="Texture" id=10]
[ext_resource path="res://assets/buttons/shop-normal.png" type="Texture" id=11]
[ext_resource path="res://assets/buttons/shop-hover.png" type="Texture" id=12]
[ext_resource path="res://assets/buttons/shop-click.png" type="Texture" id=13]
[ext_resource path="res://assets/buttons/list-hover.png" type="Texture" id=14]
[ext_resource path="res://assets/buttons/list-click.png" type="Texture" id=15]
[ext_resource path="res://assets/buttons/list-locked.png" type="Texture" id=16]
[ext_resource path="res://assets/buttons/list-normal.png" type="Texture" id=17]
[ext_resource path="res://src/resources/font1.tres" type="DynamicFont" id=18]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 18 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Container" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 1144.0
margin_top = 8.0
margin_right = 1327.0
margin_bottom = 406.0
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/separation = 16
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HomeButton" type="TextureButton" parent="Container/VBoxContainer"]
margin_right = 183.0
margin_bottom = 191.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomButton" type="TextureButton" parent="Container/VBoxContainer"]
margin_top = 207.0
margin_right = 183.0
margin_bottom = 398.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 8 )

[node name="ShopButton" type="TextureButton" parent="Container/VBoxContainer"]
margin_top = 414.0
margin_right = 183.0
margin_bottom = 605.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 12 )
texture_disabled = ExtResource( 10 )

[node name="ListButton" type="TextureButton" parent="Container/VBoxContainer"]
margin_top = 621.0
margin_right = 183.0
margin_bottom = 812.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 14 )
texture_disabled = ExtResource( 16 )

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Container/HBoxContainer"]
margin_right = 195.0
margin_bottom = 64.0

[node name="Money" type="Label" parent="Container/HBoxContainer/VBoxContainer"]
margin_right = 195.0
margin_bottom = 64.0
text = "Money"
[connection signal="pressed" from="Container/VBoxContainer/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/RoomButton" to="." method="_on_RoomButton_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/ListButton" to="." method="_on_ListButton_pressed"]
